--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
-#Mon May 16 11:29:07 CST 2011
+#Thu Dec 01 20:10:09 CST 2011
 eclipse.preferences.version=1
 encoding//WebRoot/fetchDBbackup.bat=GBK
 encoding//WebRoot/postgresqlDdBackup.bat=GBK
+encoding//docs/mysql/readme.txt=gbk
 encoding/<project>=UTF-8
